<resources>
    <string name="api_key_gcm">AIzaSyABPqO5_-fDh5N6DZunn8Grk0G4H_fXqXw</string>
    <string name="kakao_app_key">72768002b965f1b621149c6656d3a90b</string>
    <string name="facebook_app_id">1702383216739696</string>
    <string name="string_press_back_again_to_exit">Press back again to exit app.</string>
    <string name="app_name">Come On Baby</string>
    <string name="regex_email">^[A-Za-z0-9._%-]+@[A-Za-z0-9.-]+\\.[a-zA-Z]{2,4}$</string>
    <string name="string_cancel">Cancellation</string>
    <string name="string_no_network_connectivity">Network connection unavailable</string>
    <string name="string_network_not_connected_desc">A network connection is required to use this app. When the connection resumes, this message will disappear. </string>
    <string name="notification_content">We miss you, please come back</string>
    <string-array name="list_foods">
        <item>Winnie Chui</item>
        <item>Adjudication</item>
        <item>Cabbage</item>
        <item>Chinese cabbage</item>
        <item>Borkley</item>
        <item>burdock</item>
        <item>Lotus root</item>
        <item>stop</item>
        <item>potato</item>
        <item>Cobrabi</item>
        <item>onion</item>
        <item>Mugwort</item>
        <item>Ground garlic</item>
        <item>mushroom</item>
        <item>chives</item>
        <item>dandelion</item>
        <item>Cold</item>
        <item>Parsley</item>
        <item>yam</item>
        <item>Acorn</item>
        <item>Mustard kimchi</item>
        <item>Taran</item>
        <item>flaxseed</item>
        <item>Perilla</item>
        <item>olive</item>
        <item>beef</item>
        <item>duck</item>
        <item>chicken</item>
        <item>salt</item>
        <item>clam</item>
        <item>oyster</item>
        <item>mussel</item>
        <item>to</item>
        <item>shrimp</item>
        <item>I am</item>
        <item>Sea cucumber</item>
        <item>Flounder</item>
        <item>Sea bream</item>
        <item>salmon</item>
        <item>Libby</item>
        <item>Libby</item>
        <item>tuna</item>
        <item>sardine</item>
        <item>Kim</item>
        <item>Seaweed</item>
        <item>Blue</item>
        <item>Top</item>
        <item>squid</item>
        <item>Haircut</item>
        <item>eel</item>
        <item>Mackerel</item>
        <item>Samchi</item>
        <item>Pacific saury</item>
        <item>Dynamic</item>
        <item>Daejeon</item>
        <item>Anchovy</item>
        <item>Juku</item>
    </string-array>
    <string-array name="list_city">
        <item>Seoul</item>
        <item>game</item>
        <item>Incheon</item>
        <item>Busan</item>
        <item>Daejeon</item>
        <item>Dae-gu</item>
        <item>Chungcheongnam-do</item>
        <item>Chung-cheong bukdo</item>
        <item>Gangwon-do</item>
        <item>Gyeongsangbuk-do</item>
        <item>Gyeongsangnam-do</item>
        <item>Jeollabuk do</item>
        <item>Jeollanam-do</item>
        <item>Jeju Island</item>
        <item>Overseas</item>
    </string-array>
    <string-array name="list_state">
        <item>Seoul</item>
        <item>game</item>
        <item>Incheon</item>
        <item>Busan</item>
        <item>Daejeon</item>
        <item>Dae-gu</item>
        <item>Chungcheongnam-do</item>
        <item>Chung-cheong bukdo</item>
        <item>Gangwon-do</item>
        <item>Gyeongsangbuk-do</item>
        <item>Gyeongsangnam-do</item>
        <item>Jeollabuk do</item>
        <item>Jeollanam-do</item>
        <item>Jeju Island</item>
        <item>Overseas</item>
    </string-array>
    <string name="string_ok"> OK </string>
    <string name="string_2_dot">: </string>
    <string name="string_on"> ON </string>
    <string name="string_off"> OFF </string>
    <string name="text_city"> city </string>
    <string name="text_state"> Status </string>
    <string name="string_error"> Notice </string>
    <string name="string_yes"> Example </string>
    <string name="string_no"> No </string>
    <string name="string_waiting"> Processing. Please wait a moment </string>
    <string name="text_welcome_1"> Korea Federation of Societies </string>
    <string name="text_welcome_2"> (sponsored) Ministry of Gender Equality </string>
    <string name="text_welcome_3"> so that anyone who wants to give birth </string>
    <string name="text_login_app"> Sign in with your app account </string>
<string name="text_login_facebook"> Log in to your facebook account </string>
    <string name="text_login_kakaotalk"> Login to your cacao account </string>
    <string name="text_register"> Sign Up </string>
    <string name="title_username"> Enter email </string>
    <string name="title_password"> Enter password </string>
    <string name="title_forgot_password"> Forgot your password? </string>
    <string name="title_sign_in"> Login </string>
    <string name="string_login_email_incorrect"> Not a signed email </string>
    <string name="string_login_password_incorrect"> The password is incorrect. </string>
    <string name="string_login_kakaotalk_fail"> Sorry for the inconvenience. KakaoTalk login is currently working. Please use Facebook sign-up or general sign-up </string>
    <string name="title_forgot_password_screen"> Find password </string>
    <string name="title_input_email_forgot_screen"> What if I do not have a password? </string>
    <string name="title_request_password_forgot_screen"> Receiving password email </string>
    <string name="string_success_forgot_password"> An email has been sent. Please check your Spam folder. </string>
    <string name="string_error_forgot_password"> No matching email address. Please check again. </string>
    <string name="hint_email_address"> Enter email </string>
    <string name="hint_request_password"> Enter password </string>
    <string name="hint_confirm_password"> Verify Password </string>
    <string name="hint_nickname"> Enter nickname </string>
    <string name="note_request_password"> * 4 to 12 alphanumeric characters </string>
    <string name="note_nickname"> * Hangul, English, numbers between 2 and 10 characters </string>
    <string name="string_enter_your_email"> Please enter all items </string>
    <string name="string_invalid_email_address"> Not a valid email. Please try again. </string>
    <string name="string_enter_your_password"> Please enter all items </string>
    <string name="string_passwd_length_hint"> Not a valid password. Please try again. </string>
    <string name="string_enter_your_nickname"> Please enter all items </string>
    <string name="string_nickname_length_hint"> This is not a valid nickname. Please try again. </string>
    <string name="string_error_create_user"> Please try again. </string>
    <string name="title_dieu_khoan"> Accept Terms </string>
    <string name="hint_dieu_khoan"> Terms of Service </string>
    <string name="text_dieu_khoan"> Content Identification> </string>
    <string name="hint_thuthap_thongtin"> Collection and use of personal information </string>
    <string name="text_thuthap_thongtin"> Content Identification> </string>
    <string name="checkbox_dieu_khoan"> I agree </string>
    <string name="checkbox_thuthap_thongtin"> I agree </string>
    <string name="button_accept_all"> Agree all </string>
    <string name="button_accept"> Accept </string>
    <string name="button_cancel"> Cancel </string>
    <string name="string_error_check_term_policy"> Please enter all items. </string>
    <string name="text_title_basic_question">Basics questions</string>
    <string name="text_title_basic_question_finish"> Complete the baseline questions </string>
    <string name="text_can_multi_check"> (duplicate checkable) </string>
    <string name="text_female"> Female </string>
    <string name="text_male"> Male </string>
    <string name="text_title_question_1"> How many years have you not been able to be pregnant?</string>
    <string name="text_title_question_2"> Do you currently have children? </string>
    <string name="text_title_question_3"> What treatment did you undergo to try to become fertile </string>
    <string name="text_title_question_4"> What causes your infertility? </string>
    <string name="text_title_question_5"> What help do you need? Are you struggling with something? </string>
    <string name="text_title_question_6"> What are your plans for your family structure? </string>
    <string name="text_radio_question_1"> None </string>
    <string name="text_radio_question_2"> 1 to 2 years </string>
    <string name="text_radio_question_3"> 2 to 3 years </string>
    <string name="text_radio_question_4"> 3 to 5 years </string>
    <string name="text_radio_question_5"> 5+ years </string>
    <string name="text_radio_question_6"> None </string>
    <string name="text_radio_question_7"> 1 person </string>
    <string name="text_radio_question_8"> 2 people </string>
    <string name="text_radio_question_9"> 3 </string>
    <string name="text_radio_question_10"> 4 or more </string>
    <string name="text_radio_question_11"> Induce natural pregnancy  </string>
    <string name="text_radio_question_12"> Induction of ovulation </string>
    <string name="text_radio_question_13"> Artificial insemination </string>
    <string name="text_radio_question_14"> In Vitro Fertilization  </string>
    <string name="text_radio_question_15"> Operation </string>
    <string name="text_radio_question_16"> Endoscopy </string>
    <string name="text_radio_question_17"> Laparoscopic procedure </string>
    <string name="text_radio_question_18"> Endometrial stimulation </string>
    <string name="text_radio_question_19"> Inspection</string>
    <string name="text_radio_question_20"> More </string>
    <string name="text_radio_question_21"> Ovarian dysfunction </string>
    <string name="text_radio_question_22"> Uterine myoma </string>
    <string name="text_radio_question_23"> Adenomyosis </string>
    <string name="text_community"> Community </string>
    <string name="text_temperature_content"> Keep the basic body temperature at </string>
    <string name="text_temperature_content1">36.5&#x2103;</string>
    <string name="text_temperature_content2"> or more </string>
    <string name="text_temperature_content3"> is recommended. </string>
    <string name="text_temperature_content_1"> Continually inputing into the child hope note will help to improve the basic body temperature. </string>
    <string name="text_temperature_content_2"> </string>
    <string name="text_dot">.</string>
    <string name="text_cerious">&#x2103;</string>
    <string name="text_button_temperature"> Record </string>
    <string name="text_nuoc_content"> Water intake </string>
    <string name="text_nuoc_content1"> 1.5l or more per day </string>
    <string name="text_nuoc_content2"> is recommended. </string>
    <string name="text_nuoc_content3"> Except for carbonated drinks and coffee </string>
    <string name="text_checkbox_nuoc1"> 0.5 liter </string>
    <string name="text_checkbox_nuoc2"> 1 liter </string>
    <string name="text_checkbox_nuoc3"> 1.5 liters </string>
    <string name="text_checkbox_nuoc4"> 2 liters or more </string>
    <string name="text_button_nuoc"> Record </string>
    <string name="text_camxuc_content"> How was your day feeling? </string>
    <string name="text_checkbox_camxuc1"> Very good </string>
    <string name="text_checkbox_camxuc2"> Good </string>
    <string name="text_checkbox_camxuc3"> Normal </string>
    <string name="text_checkbox_camxuc4"> Bad </string>
    <string name="text_checkbox_camxuc5"> Very bad </string>
    <string name="text_button_camxuc"> Record </string>
    <string name="text_tab_community_event"> Notice\n/Event </string>
    <string name="text_tab_community_mysuccess"> My\nstory </string>
    <string name="text_tab_community_myrecipe"> My\nrecipe </string>
    <string name="text_tab_community_husband"> Husband\nstory </string>
    <string name="text_tab_community_qa">Q &amp; A</string>
</resources>