<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRootNuoc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1" >

    <include
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnButtonFinishNuoc"
        android:layout_below="@+id/layoutTitle"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_body" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.comeonbaby.android.app.view.customview.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nuoc_content" />

                <com.comeonbaby.android.app.view.customview.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/text_nuoc_content1"
                    android:textStyle="bold" />

                <com.comeonbaby.android.app.view.customview.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nuoc_content2" />
            </LinearLayout>

            <com.comeonbaby.android.app.view.customview.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_nuoc_content3" />

            <com.comeonbaby.android.app.view.customview.ToggleButtonGroupTableLayout
                android:id="@+id/radGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center" >

                <TableRow
                    android:gravity="center"
                    android:weightSum="2" >

                    <com.comeonbaby.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxNuoc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_nuoc_1"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_nuoc1" />

                    <com.comeonbaby.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxNuoc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:button="@null"
                        android:checked="true"
                        android:drawableTop="@drawable/checkbox_nuoc_2"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_nuoc2" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:weightSum="2" >

                    <com.comeonbaby.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxNuoc3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_nuoc_3"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_nuoc3" />

                    <com.comeonbaby.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxNuoc4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_nuoc_4"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_nuoc4" />
                </TableRow>
            </com.comeonbaby.android.app.view.customview.ToggleButtonGroupTableLayout>
        </LinearLayout>
    </ScrollView>

    <com.comeonbaby.android.app.view.customview.ButtonCustom
        android:id="@+id/btnButtonFinishNuoc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_bar"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_bottom_selection"
        android:gravity="center"
        android:maxHeight="@dimen/height_bottom_bar"
        android:text="@string/text_button_nuoc"
        android:textColor="@color/color_white"
        android:textStyle="normal" />

</RelativeLayout>