<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRootTemperature"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white" >

    <include
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnButtonFinishTemperature"
        android:layout_below="@+id/layoutTitle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_body" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.comeonbabys.android.app.view.customview.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_temperature_content" />

                <com.comeonbabys.android.app.view.customview.TextViewCustom
                    android:id="@+id/textTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginStart="2dp"
                    android:text="@string/text_temperature_content1"
                    android:textStyle="bold" />

                <com.comeonbabys.android.app.view.customview.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_temperature_content2" />
            </LinearLayout>

            <com.comeonbabys.android.app.view.customview.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_temperature_content3" />

            <com.comeonbabys.android.app.view.customview.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_temperature_content_1" />

            <com.comeonbabys.android.app.view.customview.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_temperature_content_2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <NumberPicker
                    android:id="@+id/picker_number1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </NumberPicker>

                <NumberPicker
                    android:id="@+id/picker_number2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" >
                </NumberPicker>

                <com.comeonbabys.android.app.view.customview.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_editext"
                    android:background="@android:color/transparent"
                    android:gravity="start|center_vertical"
                    android:minHeight="@dimen/height_editext"
                    android:maxLines="1"
                    android:text="@string/text_dot"
                    android:textColor="@color/color_black"
                    android:textStyle="bold" />

                <NumberPicker
                    android:id="@+id/picker_number3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp" >
                </NumberPicker>

                <com.comeonbabys.android.app.view.customview.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_editext"
                    android:background="@android:color/transparent"
                    android:gravity="start|center_vertical"
                    android:minHeight="@dimen/height_editext"
                    android:maxLines="1"
                    android:text="@string/text_cerious"
                    android:textColor="@color/color_black"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.comeonbabys.android.app.view.customview.ButtonCustom
        android:id="@+id/btnButtonFinishTemperature"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_bar"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_bottom_selection"
        android:gravity="center"
        android:maxHeight="@dimen/height_bottom_bar"
        android:text="@string/text_button_temperature"
        android:textColor="@color/color_white"
        android:textStyle="normal" />

</RelativeLayout>