<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRootCommunityFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@drawable/bg_button_top" >

        <com.comeonbaby.android.app.view.customview.TextViewCustom
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/color_transparent"
            android:text="@string/text_community"
            android:textColor="@color/color_white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutTabTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTitle"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:gravity="center" >

        <com.comeonbaby.android.app.view.customview.ButtonCustom
            android:id="@+id/buttonEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_community_selection"
            android:lineSpacingExtra="3dp"
            android:text="@string/text_tab_community_event"
            android:textColor="@drawable/text_color_tab_comeon_state"
            android:textStyle="normal" />

        <com.comeonbaby.android.app.view.customview.ButtonCustom
            android:id="@+id/buttonMySuccess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_community_selection"
            android:lineSpacingExtra="3dp"
            android:text="@string/text_tab_community_mysuccess"
            android:textColor="@drawable/text_color_tab_comeon_state"
            android:textStyle="normal" />

        <com.comeonbaby.android.app.view.customview.ButtonCustom
            android:id="@+id/buttonMyRecipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_community_selection"
            android:lineSpacingExtra="3dp"
            android:text="@string/text_tab_community_myrecipe"
            android:textColor="@drawable/text_color_tab_comeon_state"
            android:textStyle="normal" />

        <com.comeonbaby.android.app.view.customview.ButtonCustom
            android:id="@+id/buttonMyHusband"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_community_selection"
            android:lineSpacingExtra="3dp"
            android:text="@string/text_tab_community_husband"
            android:textColor="@drawable/text_color_tab_comeon_state"
            android:textStyle="normal" />

        <com.comeonbaby.android.app.view.customview.ButtonCustom
            android:id="@+id/buttonQA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_tab_community_selection"
            android:text="@string/text_tab_community_qa"
            android:textColor="@drawable/text_color_tab_comeon_state"
            android:textStyle="normal" />
    </LinearLayout>

    <ListView
        android:id="@+id/listviewCommunity"
        style="@style/ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutTabTitle"
        android:background="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp" >
    </ListView>

    <ImageView
        android:id="@+id/imgNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/bg_button_new_selection" />

</RelativeLayout>