<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRootCamxuc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1" >

    <include
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true"
        layout="@layout/layout_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnButtonFinishCamxuc"
        android:layout_below="@+id/layoutTitle"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_body" >

            <com.comeonbabys.android.app.view.customview.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_camxuc_content" />

            <com.comeonbabys.android.app.view.customview.ToggleButtonGroupTableLayout
                android:id="@+id/radGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center" >

                <TableRow
                    android:gravity="center"
                    android:weightSum="2" >

                    <com.comeonbabys.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxCamxuc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_camxuc_1"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_camxuc1" />

                    <com.comeonbabys.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxCamxuc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_camxuc_2"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_camxuc2" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:weightSum="1" >

                    <com.comeonbabys.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxCamxuc3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_camxuc_3"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_camxuc3" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:weightSum="2" >

                    <com.comeonbabys.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxCamxuc4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_camxuc_4"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_camxuc4" />

                    <com.comeonbabys.android.app.view.customview.RadioButtonCustom
                        android:id="@+id/checboxCamxuc5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:button="@null"
                        android:drawableTop="@drawable/checkbox_camxuc_5"
                        android:gravity="center_horizontal"
                        android:text="@string/text_checkbox_camxuc5" />
                </TableRow>
            </com.comeonbabys.android.app.view.customview.ToggleButtonGroupTableLayout>
        </LinearLayout>
    </ScrollView>

    <com.comeonbabys.android.app.view.customview.ButtonCustom
        android:id="@+id/btnButtonFinishCamxuc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_bottom_bar"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_button_bottom_selection"
        android:gravity="center"
        android:maxHeight="@dimen/height_bottom_bar"
        android:text="@string/text_button_camxuc"
        android:textColor="@color/color_white"
        android:textStyle="normal" />

</RelativeLayout>